--- a/src/components/CategoryItem/CategoryItem.scss
+++ b/src/components/CategoryItem/CategoryItem.scss
@@ -1,10 +1,3 @@
-.categories-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-  
 .category-container {
     min-width: 30%;
     height: 240px;
@@ -12,7 +5,7 @@
     flex: 1 1 auto;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid #d3ba00;
     margin: 0 7.5px 15px;
     overflow: hidden;
   
@@ -20,8 +13,8 @@
       cursor: pointer;
   
       & .background-image {
-        transform: scale(1.1);
-        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        transform: scale(1.15);
+        transition: transform 5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
       }
   
       & .category-body {
@@ -55,8 +48,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border: 1px solid #000;
-      background-color: #ffffff;
+      border: 1px solid #d3ba00;
+      background-color: #FFE202;
       opacity: 0.7;
       position: absolute;
   
