--- a/src/components/Categories/categories.scss
+++ b/src/components/Categories/categories.scss
@@ -2,6 +2,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
   
