--- a/src/components/CategoryItem/CategoryItem.scss
+++ b/src/components/CategoryItem/CategoryItem.scss
@@ -5,7 +5,7 @@
     flex: 1 1 auto;
     align-items: center;
     justify-content: center;
-    border: 1px solid #d3ba00;
+    border: 1px solid rgb(124, 124, 124);
     margin: 0 7.5px 15px;
     overflow: hidden;
   
@@ -48,7 +48,6 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border: 1px solid #d3ba00;
       background-color: #FFE202;
       opacity: 0.7;
       position: absolute;
