--- a/src/routes/Navigation/Navigation.scss
+++ b/src/routes/Navigation/Navigation.scss
@@ -22,6 +22,11 @@
       .link {
         padding: 1px 16px;
         cursor: pointer;
+        opacity: 0.8;
+        &:hover, &:active{
+          opacity: 1;
+          text-decoration: underline;
+        }
       }
     }
 }
