--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,5 @@
 .button-container {
-    min-width: 165px;
+    min-width: 160px;
     width: auto;
     height: 50px;
     letter-spacing: 0.4px;
@@ -31,12 +31,17 @@
     }
   
     &.google-sign-in {
-      background-color: #4285f4;
-      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      color: #4285f4;
+      background-color: white;
+      border: 1px solid #555;
   
       &:hover {
-        background-color: #357ae8;
-        border: none;
+        color: #0a68ff;
+        background-color: #eeeeee;
+        transition: 200ms ease all;
       }
     }
   
