--- a/src/routes/Navigation/Navigation.scss
+++ b/src/routes/Navigation/Navigation.scss
@@ -19,7 +19,7 @@
       justify-content: flex-end;
       align-items: flex-end;
   
-      .link {
+      .nav-link {
         padding: 1px 16px;
         cursor: pointer;
         opacity: 0.8;
