--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,24 @@
 
 body {
   margin: 0;
+  padding: 4px 24px;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &::-webkit-scrollbar{
+    width: 16px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  &::-webkit-scrollbar-thumb {
+    background-color: #ffea4e;
+    outline: 1px solid #ffe300;
+    border-radius: 8px;
+  } 
 }
 
 code {
