--- a/src/routes/Navigation/Navigation.scss
+++ b/src/routes/Navigation/Navigation.scss
@@ -20,6 +20,7 @@
       align-items: flex-end;
   
       .nav-link {
+        font-size: 16px;
         padding: 1px 16px;
         cursor: pointer;
         opacity: 0.8;
