implemented checkout cart functionality

--- a/src/routes/Checkout/Checkout.scss
+++ b/src/routes/Checkout/Checkout.scss
@@ -24,9 +24,9 @@
     }
   
     .total {
-      margin-top: 32px;
+      margin: 24px 0;
       margin-left: auto;
-      font-size: 32px;
+      font-size: 24px;
     }
   }
   
