--- a/src/components/Checkout-Item/Checkout-Item.scss
+++ b/src/components/Checkout-Item/Checkout-Item.scss
@@ -4,11 +4,11 @@
     min-height: 100px;
     border-bottom: 1px solid darkgrey;
     padding: 15px 0;
-    font-size: 20px;
+    font-size: 18px;
     align-items: center;
   
     .image-container {
-      width: 24%;
+      width: 23%;
       padding-right: 15px;
   
       img {
@@ -29,8 +29,8 @@
         cursor: pointer;
       }
   
-      .value {
-        margin: 0 10px;
+      .quantity-value {
+        margin: 0 12px;
       }
     }
   
