implemented category route in shop route

--- a/src/routes/Category/Category.scss
+++ b/src/routes/Category/Category.scss
@@ -1,5 +1,5 @@
-.products-container{
+.category-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 48px 16px;
+    gap: 48px, 24px;
 }
