--- a/src/components/Category-Preview/Category-Preview.scss
+++ b/src/components/Category-Preview/Category-Preview.scss
@@ -1,10 +1,14 @@
 .category-preview-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 32px;
+
+    h2 {
+        text-align: center;
+    }
   
     .title {
-      font-size: 28px;
+      font-size: 24px;
       margin-bottom: 25px;
       cursor: pointer;
     }
@@ -12,6 +16,6 @@
     .preview {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      column-gap: 20px;
+      column-gap: 24px;
     }
   }
