--- a/src/routes/Category/Category.scss
+++ b/src/routes/Category/Category.scss
@@ -1,5 +1,13 @@
 .category-container{
+    margin: 16px 0;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 48px, 24px;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+
+.category-title {
+    font-size: 32px;
+    margin: 24px 0;
+    text-align: center;
 }
