--- a/src/routes/Category/category.scss
+++ b/src/routes/Category/category.scss
@@ -4,6 +4,11 @@
     grid-template-columns: repeat(4, 1fr);
     row-gap: 48px;
     column-gap: 24px;
+
+    @media screen and (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 16px;
+    }
 }
 
 .category-title {
