--- a/src/routes/Checkout/checkout.scss
+++ b/src/routes/Checkout/checkout.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     margin: 48px auto 0;
+
+    @media screen and (max-width: 800px) {
+      width: 90%;
+    }
   
     .checkout-header {
       width: 100%;
@@ -19,6 +23,13 @@
   
         &:last-child {
           width: 8%;
+        }
+
+        @media screen and (max-width: 800px) {
+          width: 22%;
+          &:last-child {
+            width: 12%;
+          }
         }
       }
     }
