checkout mobile responsiveness

--- a/src/components/Checkout-Item/checkout-item.scss
+++ b/src/components/Checkout-Item/checkout-item.scss
@@ -6,6 +6,10 @@
     padding: 15px 0;
     font-size: 18px;
     align-items: center;
+
+    @media screen and (max-width: 800px) {
+      font-size: 18px;
+    }
   
     .image-container {
       width: 23%;
@@ -20,6 +24,10 @@
     .quantity,
     .price {
       width: 23%;
+
+      @media screen and (max-width: 800px) {
+        width: 22%;
+      }
     }
   
     .quantity {
