authentication page responsive

--- a/src/routes/Authentication/authentication.scss
+++ b/src/routes/Authentication/authentication.scss
@@ -3,4 +3,13 @@
     width: 960px;
     justify-content: space-between;
     margin: 32px auto;
+
+    @media screen and (max-width: 800px) {
+        flex-direction: column;
+        width: unset;
+        align-items: center;
+        > *:first-child {
+          margin-bottom: 50px;
+        }
+    }
 }
